--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,9 @@
     <string name="login_button">Войти</string>
     <string name="login_with_google">Войти через Google</string>
     <string name="sign_up_button">Зарегистрироваться</string>
-    <string name="create_account">Создать аккаунт</string>
+    <string name="sign_up_title">Создать аккаунт</string>
     <string name="next">Далее</string>
+    <string name="back">Назад</string>
     <string name="first_name">Имя</string>
     <string name="enter_first_name">Введите имя</string>
     <string name="second_name">Фамилия</string>
@@ -26,6 +27,65 @@
     <string name="enter_middle_name">Введите отчество</string>
     <string name="birth_date">Дата рождения</string>
     <string name="gender">Пол</string>
-    <string name="male">Мужский</string>
+    <string name="male">Мужской</string>
     <string name="female">Женский</string>
+    <string name="error_short_password">Пароль должен быть не меньше 6 символов</string>
+    <string name="error_blank_password">Пароль не может быть пустым</string>
+    <string name="error_not_valid_email">Недействительный адрес электронной почты.</string>
+    <string name="error_blank_email">Адрес электронной почты не может быть пустым</string>
+    <string name="error_auth">Неверный email или пароль</string>
+    <string name="passwords_no_equal">Пароль не совпадает</string>
+    <string name="dd_mm_yy">DD/MM/YY</string>
+    <string name="ok">ОК</string>
+    <string name="cancel">Отменить</string>
+    <string name="load_photo_info">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
+    <string name="driver_license_label">Водительское удостоверение</string>
+    <string name="driver_license_placeholder">0000000000</string>
+    <string name="date_of_issue_label">Дата выдачи</string>
+    <string name="load_photo_driver_license_label">Загрузите фото водительского удостоверения</string>
+    <string name="load_photo_passport_label">Загрузите фото паспорта</string>
+    <string name="load_photo">Загрузить фото</string>
+    <string name="congratulation">Поздравляем</string>
+    <string name="congratulation_text">Вы успешно зарегистрировались.  Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
+    <string name="onboarding_title_first">Аренда автомобилей</string>
+    <string name="onboarding_title_second">Безопасно и удобно</string>
+    <string name="onboarding_title_third">Лучшие предложения</string>
+    <string name="onboarding_description_first">Открой для себя удобный и доступный способ передвижения </string>
+    <string name="onboarding_description_second">Арендуй автомобиль и наслаждайся его удобством</string>
+    <string name="onboarding_description_third">Выбирай понравившееся среди сотен доступных автомобилей</string>
+    <string name="go">Поехали</string>
+    <string name="skip">Пропустить</string>
+    <string name="field_no_empty">Поле не должно быть пустым</string>
+    <string name="birth_date_future_error">Неправильная дата</string>
+    <string name="minimum_age_error">Возраст меньше 18</string>
+    <string name="photo_upload_error">Фотография не загружена</string>
+    <string name="congratulation_title">Пользуйтесь с удовольствием</string>
+    <string name="my_bookings">Мои бронирования</string>
+    <string name="theme">Тема</string>
+    <string name="theme_system">Системная</string>
+    <string name="theme_light">Светлая</string>
+    <string name="theme_dark">Тёмная</string>
+    <string name="notifications">Уведомления</string>
+    <string name="connect_car">Подключить свой автомобиль</string>
+    <string name="help">Помощь</string>
+    <string name="invite_friend">Пригласи друга</string>
+    <string name="book">Забронировать</string>
+    <string name="details">Детали</string>
+    <string name="transmission">А/Т</string>
+    <string name="fuel">Бензин</string>
+    <string name="in_day">в день</string>
+    <string name="enter_car_brand">Введите марку автомобиля</string>
+    <string name="search">Поиск</string>
+    <string name="find_car">Давайте найдем автомобиль</string>
+    <string name="find_car_loading">Ищем подходящие автомобили</string>
+    <string name="settings">Настройки</string>
+    <string name="profile">Профиль</string>
+    <string name="joined">Присоединился %1$d.%2$d </string>
+    <string name="change_password">Поменять пароль</string>
+    <string name="google">Google</string>
+    <string name="no_google_email">Gmail не привязан</string>
+    <string name="on_query">По запросу</string>
+    <string name="not_found">ничего не найдено</string>
+    <string name="become_a_landlord">Стать арендодателем</string>
+    <string name="log_out">Выйти из аккаунта</string>
 </resources>
